# katsuobushi

./: .gitignore  CHANGELOG.md  Cargo.toml  MIGRATING.md  README.md  VP_VULKANINFO_AMD_Radeon_780M_Graphics_(RADV_PHOENIX)_26_1_2.json  flake.nix  hero.ansi  rust-toolchain.toml
.claude-plugin/: marketplace.json
lib/: default.nix  markdown.nix  rust.nix  sandbox.nix
lib/markdown/: README.md  default.nix
lib/menu/: README.md  default.nix
lib/project/: README.md  default.nix
lib/rust/: README.md  default.nix
lib/sandbox/: README.md  default.nix
plugins/katsuobushi/.claude-plugin/: plugin.json
plugins/katsuobushi/skills/project/: SKILL.md
plugins/katsuobushi/skills/project-orchestration/: SKILL.md
plugins/katsuobushi/skills/sandbox/: SKILL.md
project/kanban/: .card-template.md  .dispatch-instructions.md  BOARD.md  README.md
project/kanban/issues/: 0e6516.md  394a3c.md  3e9510.md  40ab60.md  455795.md  55cfca.md  56dc12.md  577897.md  5b4df3.md  5eb75c.md  680d06.md  69224c.md  86419c.md  94bc4f.md  9f44c7.md  a9c135.md  ad09b5.md  bf452e.md  e3e1d2.md  e6f6b7.md  fa0c31.md
rust/katsuctl/: Cargo.toml
rust/katsuctl/src/sandbox/: attach.rs  emit.rs  fetch.rs  host.rs  instance.rs  mod.rs  output.rs  prompt.rs  qmp.rs  resolve.rs  start.rs  status.rs  stop.rs
rust/katsuctl/src/sandbox/snapshots/: katsuctl__sandbox__start__tests__snapshot_ephemeral_agent_no_prompt.snap  katsuctl__sandbox__start__tests__snapshot_ephemeral_agent_with_prompt.snap  katsuctl__sandbox__start__tests__snapshot_ephemeral_interactive.snap  katsuctl__sandbox__start__tests__snapshot_named_agent_with_prompt.snap
rust/katsuobushi-controller/: Cargo.toml
rust/katsuobushi-controller/src/: main.rs  output.rs
rust/katsuobushi-controller/src/project/: board.rs  clock.rs  fs.rs  init.rs  layout.rs  lint.rs  mod.rs  model.rs  new.rs  note.rs  prioritize.rs  query.rs  select.rs  set_status.rs  state.rs
rust/katsuobushi-controller/src/project/snapshots/: katsuctl__project__board__tests__golden_after_archive_into_populated_archive.snap  katsuctl__project__board__tests__golden_after_move_to_lane.snap  katsuctl__project__board__tests__golden_initial_board.snap
rust/katsuobushi-controller/src/sandbox/: attach.rs  dispatch.rs  emit.rs  fetch.rs  gfx.rs  host.rs  instance.rs  liveness.rs  mod.rs  output.rs  prompt.rs  qmp.rs  resolve.rs  screenshot.rs  spec.rs  start.rs  status.rs  stop.rs
rust/katsuobushi-controller/src/sandbox/snapshots/: katsuctl__sandbox__attach__tests__it_snapshots_the_attach_recipe.snap  katsuctl__sandbox__emit__tests__it_snapshots_a_trivial_recipe.snap  katsuctl__sandbox__start__tests__snapshot_agent_graphics_gpu_rung.snap  katsuctl__sandbox__start__tests__snapshot_agent_graphics_software_fallback.snap  katsuctl__sandbox__start__tests__snapshot_agent_with_import_host_store_db_and_context.snap  katsuctl__sandbox__start__tests__snapshot_ephemeral_agent_no_prompt.snap  katsuctl__sandbox__start__tests__snapshot_ephemeral_agent_with_prompt.snap  katsuctl__sandbox__start__tests__snapshot_ephemeral_interactive.snap  katsuctl__sandbox__start__tests__snapshot_named_agent_with_prompt.snap  katsuctl__sandbox__start__tests__snapshot_named_interactive.snap
rust/katsuobushi-protocol/: Cargo.toml
rust/katsuobushi-sandbox-control/: Cargo.toml
rust/katsuobushi-sandbox-control/src/: lib.rs  protocol.rs
rust/katsuobushi-sandbox-guest/: Cargo.toml  spike-roundtrip.sh
rust/katsuobushi-sandbox-guest/src/: lib.rs
rust/katsuobushi-sandbox-protocol/: Cargo.toml
rust/katsuobushi-sandbox-protocol/src/: lib.rs
templates/default/: flake.nix
templates/rust/: flake.nix
templates/rust/design/: README.md
templates/rust/nix/: rust.nix
templates/rust/project/design/: README.md
templates/sandbox/: flake.nix
