# Workspace root for Katsuobushi's in-tree Rust. Member crates live under
# `rust/` so the crane-based `lib.rust` source filter (sourceInclude defaults to
# `[".cargo" "Cargo.lock" "Cargo.toml" "rust-toolchain.toml" "rust"]`) picks them
# up, and every crate inherits its deps from `[workspace.dependencies]` below so
# the `cargoChecks.sharedWorkspaceDeps` hygiene check passes.
[workspace]
resolver = "2"
members = ["rust/katsuobushi-sandbox-protocol", "rust/katsuobushi-sandbox-guest", "rust/katsuobushi-controller"]

# Shared package metadata. Members inherit `version` via `version.workspace =
# true`; also lets crane read a version for the virtual manifest without warning.
[workspace.package]
version = "0.1.0"

[workspace.dependencies]
# rmcp: the official Rust MCP SDK. `server` + `macros` for the ServerHandler;
# `transport-io` for the stdio transport Claude Code spawns us over.
rmcp = { version = "1", features = ["server", "macros", "transport-io"] }
# Linux-only AF_VSOCK transport for the production host↔guest hop.
tokio-vsock = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util", "sync", "net", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
# katsuctl output/UX: aligned status tables + terminal color (gated; see katsuctl §13).
comfy-table = "7"
owo-colors = "4"
# Dev-only: golden snapshot tests for the emitted start/attach scripts (#013).
insta = "1"
