[package]
name = "katsuobushi-controller"
version.workspace = true
edition = "2021"
description = "Host-side Katsuobushi sandbox controller (the `katsuctl <domain> <command>` binary)."

# The package is `katsuobushi-controller` but ships the `katsuctl` CLI binary, so
# name the bin explicitly (cargo would otherwise derive it from the package name).
[[bin]]
name = "katsuctl"
path = "src/main.rs"

[dependencies]
# Shared wire types (Prompt/Report/GuestMessage/Status) for the vsock control
# channel — the `prompt` subcommand streams these, so host and guest cannot
# drift (design/katsuctl.md §3). Path dep on the in-workspace protocol crate.
katsuobushi-sandbox-protocol = { path = "../katsuobushi-sandbox-protocol" }
clap.workspace = true
anyhow.workspace = true
# Inherited now for the upcoming subcommands (design/katsuctl.md §12): tokio for
# the async vsock/QMP paths (prompt/status/stop), serde for spec/instance
# (de)serialization. The dispatch stubs in this scaffold do not use them yet.
tokio.workspace = true
tokio-vsock.workspace = true
serde.workspace = true
serde_json.workspace = true
# Output/UX foundation (design/katsuctl.md §13, issue #007): status tables + color.
comfy-table.workspace = true
owo-colors.workspace = true

[dev-dependencies]
# Golden snapshot tests for emitted start/attach scripts (design §7.2, issue #013).
insta.workspace = true
