[package]
name = "katsuobushi-sandbox-control"
version.workspace = true
edition = "2021"
description = "Host↔guest sandbox controller for Katsuobushi agent mode: channel server + host client."

# Shared wire types live in the lib target (src/protocol.rs via src/lib.rs); both
# binaries link it, so the host and guest sides cannot drift.
[lib]
name = "katsuobushi_sandbox_control"
path = "src/lib.rs"

# Guest: the rmcp/channel controller server claude spawns over stdio.
[[bin]]
name = "katsuobushi-sandbox-control"
path = "src/bin/server.rs"

# Host: the client backing `sandbox:prompt`.
[[bin]]
name = "katsuobushi-sandbox-prompt"
path = "src/bin/prompt.rs"

[dependencies]
rmcp.workspace = true
tokio-vsock.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
clap.workspace = true
