[package]
name = "katsuobushi-sandbox-guest"
version.workspace = true
edition = "2021"
description = "Guest-side sandbox controller for Katsuobushi agent mode: the rmcp/channel server."

# Shared wire types live in the standalone `katsuobushi-sandbox-protocol` crate, so the
# host (`katsuctl`) and guest sides cannot drift.
[lib]
name = "katsuobushi_sandbox_guest"
path = "src/lib.rs"

# Guest: the rmcp/channel controller server claude spawns over stdio. The host
# client was retired into `katsuctl sandbox prompt`.
[[bin]]
name = "katsuobushi-sandbox-guest"
path = "src/bin/server.rs"

[dependencies]
katsuobushi-sandbox-protocol = { path = "../katsuobushi-sandbox-protocol" }
rmcp.workspace = true
tokio-vsock.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
# Retained as a shared workspace dep so Cargo.lock stays in lockstep; the guest
# server does not parse args today, but keeping the entry avoids a lock churn
# unrelated to retiring the host client bin.
clap.workspace = true
