[package]
name = "katsuobushi-sandbox-protocol"
version.workspace = true
edition = "2021"
description = "Shared serde wire types for Katsuobushi agent mode (host↔guest channel + report socket)."

# A standalone lib crate so the host controller and the guest server can both
# depend on the wire types without the host linking the guest server's deps.
[lib]
name = "katsuobushi_sandbox_protocol"
path = "src/lib.rs"

[dependencies]
serde.workspace = true
